--- a/lend_frontend/src/App.scss
+++ b/lend_frontend/src/App.scss
@@ -1,1 +1,3 @@
 @import "./components/Login/_Login.scss";
+@import "./components/organizations/AppBar/AppBar";
+@import "./components/organizations/BottomBar/BottomBar";
