--- a/lend_frontend/src/components/organizations/BottomBar/_BottomBar.scss
+++ b/lend_frontend/src/components/organizations/BottomBar/_BottomBar.scss
@@ -7,6 +7,7 @@ $bottombar-selected-color: rgb(118, 165, 118);
 	position: fixed;
 	bottom: 0;
 	width: 100vw;
+	box-sizing: border-box;
 	
 	display: flex;
 	flex-direction: row;
