Screenコンポーネントを作成

--- a/lend_frontend/src/App.scss
+++ b/lend_frontend/src/App.scss
@@ -1,4 +1,5 @@
 @import "./components/Login/_Login.scss";
+@import "./components/Screen/Screen";
 @import "./components/organizations/TabBar/TabBar";
 @import "./components/organizations/AppBar/AppBar";
 @import "./components/organizations/BottomBar/BottomBar";
