--- a/lend_frontend/src/components/organizations/BottomBar/_BottomBar.scss
+++ b/lend_frontend/src/components/organizations/BottomBar/_BottomBar.scss
@@ -8,6 +8,7 @@ $bottombar-selected-color: rgb(118, 165, 118);
 	bottom: 0;
 	width: 100vw;
 	box-sizing: border-box;
+	z-index: 10;
 	
 	display: flex;
 	flex-direction: row;
