--- a/lend_frontend/src/components/Viewer/_Viewer.scss
+++ b/lend_frontend/src/components/Viewer/_Viewer.scss
@@ -15,6 +15,7 @@
 		width: 50vw;
 		height: 100vh;
 		max-width: 150px;
+		// NOTE: 開発用に色をつけています
 		background: rgba(255, 0, 0, 0.5);
 		z-index: 1;
 		top: 0;
@@ -26,6 +27,7 @@
 		width: 50vw;
 		height: 100vh;
 		max-width: 150px;
+		// NOTE: 開発用に色をつけています
 		background: rgba(0, 255, 0, 0.5);
 		z-index: 1;
 		top: 0;
