--- a/lend_frontend/src/App.scss
+++ b/lend_frontend/src/App.scss
@@ -1,6 +1,7 @@
 @import "./components/Login/_Login.scss";
 @import "./components/Screen/Screen";
 @import "./components/Viewer/Viewer";
+@import "./components/Store/Store";
 @import "./components/MyBookList/MyBookList";
 @import "./components/organizations/TabBar/TabBar";
 @import "./components/organizations/AppBar/AppBar";
