--- a/lend_frontend/src/components/Modal/ModalContentConfirm/_ModalContentConfirm.scss
+++ b/lend_frontend/src/components/Modal/ModalContentConfirm/_ModalContentConfirm.scss
@@ -1,7 +1,8 @@
 .modal_content__confirm {
   &__description {
-    text-align: center;
-    height: 50%;
+    margin: 0 auto;
+    padding: 80px 0px;
+    width: 80%;
   }
 
   &__button {
