--- a/lend_frontend/src/components/SelectFriendScreen/_SelectFriendScreen.scss
+++ b/lend_frontend/src/components/SelectFriendScreen/_SelectFriendScreen.scss
@@ -20,3 +20,10 @@ $font-color: #222222;
     }
   }
 }
+
+.modal_background {
+  margin: 200px auto;
+  width: 80%;
+  height: 350px;
+  background-color: white;
+}
