--- a/lend_frontend/src/components/Store/_Store.scss
+++ b/lend_frontend/src/components/Store/_Store.scss
@@ -1,13 +1,64 @@
 .store-page{
-	.upper-area{
-
+	.search-box-outer{
+		display: flex;
+		flex-direction: row;
+		justify-content: center;
+		align-items: center;
+		.search-box {
+			width: 70%;
+			height: 30px;
+			padding: 0px 10px;
+			margin-right: 10px;
+			border-color: rgba(255, 255, 255, 0);
+			background: #e6e6e6;
+			outline: none;
+		}
+		.search-icon{
+			background: #e6e6e6;
+		}
 	}
 
-	.middle-area{
-
+	.divider{
+		border-top: solid rgb(231, 231, 231) 1px;
+		margin: 1em 0;
 	}
 
-	.bottom-area{
-		
+	.upper-title{
+		margin: .5em;
+	}
+	.gallery{
+		display: flex;
+		flex-direction: row;
+		overflow: scroll;
+	}
+
+	.footer-label{
+		text-align: end;
+		padding: 1em;
+	}
+}
+
+.store-book-card{
+	padding: 1em;
+	width: 120px;
+
+	img{
+		width: 120px;
+	}
+
+	&>div{
+		text-overflow: ellipsis;
+		white-space: nowrap;
+		overflow: hidden;
+	}
+
+	.auther{
+		font-size: 80%;
+		color: grey;
+	}
+
+	.info{
+		text-overflow: ellipsis;
+		white-space: nowrap;
 	}
 }
