Revert "ストア画面を実装"
This reverts commit c4648526255f82abcfd82849e0915ea6b07ff8d6.

--- a/lend_frontend/src/components/BookCard/_BookCard.scss
+++ b/lend_frontend/src/components/BookCard/_BookCard.scss
@@ -4,6 +4,7 @@ $book-card-height: 200px;
 .BookCard {
   margin: 15px auto;
   width: 340px;
+  height: 200px;
   border-top: solid 1px black;
 
   &__top {
