--- a/lend_frontend/src/components/Store/_Store.scss
+++ b/lend_frontend/src/components/Store/_Store.scss
@@ -1,13 +1,24 @@
+$searchbox-inner-height: 30px;
+$searchbox-padding: 10px;
+$searchbox-total-height: $searchbox-inner-height + $searchbox-padding;
+
 .store-page{
 	.search-box-outer{
+		position: fixed;
+		top: 60px;
+		width: 100vw;
+		padding: .5em 0;
+
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
+
+		background: white;
 		.search-box {
 			width: 70%;
-			height: 30px;
-			padding: 0px 10px;
+			height: $searchbox-inner-height;
+			padding: 0px $searchbox-padding;
 			margin-right: 10px;
 			border-color: rgba(255, 255, 255, 0);
 			background: #e6e6e6;
@@ -17,6 +28,8 @@
 			background: #e6e6e6;
 		}
 	}
+
+	margin-top: $searchbox-total-height;
 
 	.divider{
 		border-top: solid rgb(231, 231, 231) 1px;
