--- a/lend_frontend/src/App.scss
+++ b/lend_frontend/src/App.scss
@@ -2,6 +2,7 @@
 @import "./components/Screen/Screen";
 @import "./components/Viewer/Viewer";
 @import "./components/MyBookList/MyBookList";
+@import "./components/BookPurchase/BookPurchase";
 @import "./components/organizations/TabBar/TabBar";
 @import "./components/organizations/AppBar/AppBar";
 @import "./components/organizations/BottomBar/BottomBar";
