値段表記を追加

--- a/lend_frontend/src/components/BookPurchase/_BookPurchase.scss
+++ b/lend_frontend/src/components/BookPurchase/_BookPurchase.scss
@@ -18,6 +18,11 @@ $hover-button-color: #4a91af;
 		.book-title{
 			flex: 1;
 		}
+		.book-price{
+			margin-top: 1em;
+			font-weight: bold;
+			font-size: 120%;
+		}
 	}
 
 	.purchase-button{
