--- a/lend_frontend/src/components/MyBookList/_MyBookList.scss
+++ b/lend_frontend/src/components/MyBookList/_MyBookList.scss
@@ -1,3 +1,10 @@
 .mybooklist-body{
+	padding-top: 50px;
 	padding-bottom: 1em;
+
+	.empty-message{
+		margin-top: 2em;
+		text-align: center;
+	}
 }
+
