--- a/lend_frontend/src/components/organizations/TabBar/_TabBar.scss
+++ b/lend_frontend/src/components/organizations/TabBar/_TabBar.scss
@@ -1,11 +1,17 @@
 .tabBar{
+	position: fixed;
+	top: 50px;
+	width: 100vw;
+	height: 70px;
+
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: row;
 	
 	.tabBar-item{
 		background: khaki;
-		padding: .5em 0px;
+		padding-top: 1em;
+		padding-bottom: .5em;
 
 		flex: 1;
 		display: flex;
@@ -16,11 +22,16 @@
 			margin-right: 0.5em;
 		}
 
-		border-top: 4px solid rgba(0,0,0,0);
-		border-bottom: 4px solid rgba(0,0,0,0);
-		transition: border-color 0.4s;
+		border-top: 6px solid rgba(0,0,0,0);
+		border-bottom: 6px solid rgba(0,0,0,0);
+		color: rgb(92, 92, 92);
+		
+		transition: border-color 0.4s, font-size 0.1s;
+
 		&.tabBar-item-selected{
-			border-bottom: 4px solid rgb(182, 152, 107);
+			font-size: 100%;
+			color: black;
+			border-bottom: 6px solid rgb(182, 152, 107);
 		}
 	}
 
