--- a/lend_frontend/src/components/BookPurchase/_BookPurchase.scss
+++ b/lend_frontend/src/components/BookPurchase/_BookPurchase.scss
@@ -4,29 +4,7 @@ $hover-purchase-button-color: #4a91af;
 $read-button-color: #dae35a;
 $hover-read-button-color: #adaf4a;
 
-.book-purchase-page{
-	display: flex;
-	flex-direction: column;
-
-	.upper-area{
-		display: flex;
-		flex-direction: row;
-		width: 100%;
-		height: 50%;
-
-		.book-img{
-			flex: 1;
-		}
-		.book-title{
-			flex: 1;
-		}
-		.book-price{
-			margin-top: 1em;
-			font-weight: bold;
-			font-size: 120%;
-		}
-	}
-
+.book-purchase-page, .purchase-modal-content{
 	.action-button{
 		cursor: pointer;
 		text-align: center;
@@ -54,6 +32,41 @@ $hover-read-button-color: #adaf4a;
 			background: $hover-read-button-color;
 		}
 	}
+	.back-button{
+		border: 1px solid rgb(187, 187, 187);
+		box-shadow: none;
+		color: black;
+		font-weight: normal;
+		&:hover{
+			background: rgb(216, 216, 216);
+		}
+	}
+}
+
+.book-purchase-page{
+	display: flex;
+	flex-direction: column;
+
+	.upper-area{
+		display: flex;
+		flex-direction: row;
+		width: 100%;
+		height: 50%;
+
+		.book-img{
+			flex: 1;
+		}
+		.book-title{
+			flex: 1;
+		}
+		.book-price{
+			margin-top: 1em;
+			font-weight: bold;
+			font-size: 120%;
+		}
+	}
+
+	
 
 	.section{
 		padding: 1em 0em;
@@ -72,5 +85,39 @@ $hover-read-button-color: #adaf4a;
 		.section-body{
 			margin: 1em .5em;
 		}
+	}
+}
+
+.purchase-modal-content{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	.modal-title{
+		width: 100%;
+		text-align: center;
+		padding: 1em 0em;
+		border-bottom: 1px #dadada solid;
+		background: $header-color;
+		color: white;
+	}
+
+	.modal-body{
+		box-sizing: border-box;
+		padding: 1em;
+		width: 100%;
+		text-align: center;
+
+		.book-price{
+			text-align: center;
+			border: 1px solid rgb(212, 212, 212);
+			padding: 1em;
+			margin: 0 1em;
+		}
+	}
+
+	.button-area{
+		display: flex;
+		flex-direction: row;
 	}
 }
