--- a/lend_frontend/src/components/SelectFriendScreen/_SelectFriendScreen.scss
+++ b/lend_frontend/src/components/SelectFriendScreen/_SelectFriendScreen.scss
@@ -22,8 +22,13 @@ $font-color: #222222;
 }
 
 .modal_background {
+  text-align: center;
   margin: 200px auto;
   width: 80%;
   height: 350px;
   background-color: white;
+
+  textarea {
+    margin-top: 15px;
+  }
 }
