改行用のcssを追加

--- a/lend_frontend/src/components/Notification/NotificationColumn/_NotificationColumn.scss
+++ b/lend_frontend/src/components/Notification/NotificationColumn/_NotificationColumn.scss
@@ -2,6 +2,10 @@
 	padding: 1em;
 	border-bottom: 1px solid #dfdfdf;
 
+	.notification-body{
+		white-space: pre-line;
+	}
+
 	.notification-date{
 		text-align: end;
 		font-size: 80%;
