借りている本に返却期限を追加

--- a/lend_frontend/src/components/BookCard/_BookCard.scss
+++ b/lend_frontend/src/components/BookCard/_BookCard.scss
@@ -40,6 +40,10 @@ $book-card-height: 200px;
       }
     }
   }
+  
+  &__middle{
+    text-align: center;
+  }
 
   &__under {
     display: flex;
