--- a/lend_frontend/src/components/Viewer/_Viewer.scss
+++ b/lend_frontend/src/components/Viewer/_Viewer.scss
@@ -15,8 +15,7 @@
 		width: 50vw;
 		height: 100vh;
 		max-width: 150px;
-		// NOTE: 開発用に色をつけています
-		background: rgba(255, 0, 0, 0.5);
+		background: transparent;
 		z-index: 1;
 		top: 0;
 		right: 0;
@@ -27,8 +26,7 @@
 		width: 50vw;
 		height: 100vh;
 		max-width: 150px;
-		// NOTE: 開発用に色をつけています
-		background: rgba(0, 255, 0, 0.5);
+		background: transparent;
 		z-index: 1;
 		top: 0;
 		left: 0;
@@ -37,4 +35,20 @@
 	.additional-page{
 		z-index: 3;
 	}
+}
+
+.viewer-header{
+	position: fixed;
+	top: 0;
+	width: 100vw;
+	padding: 1em;
+	box-sizing: border-box;
+	z-index: 10;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	
+	background: cyan;
+	color: black;
 }
