割引表示を実装

--- a/lend_frontend/src/App.scss
+++ b/lend_frontend/src/App.scss
@@ -7,4 +7,5 @@
 @import "./components/BookPurchase/BookPurchase";
 @import "./components/organizations/TabBar/TabBar";
 @import "./components/organizations/AppBar/AppBar";
+@import "./components/organizations/BookImage/BookImage";
 @import "./components/organizations/BottomBar/BottomBar";
