--- a/lend_frontend/src/components/BookPurchase/_BookPurchase.scss
+++ b/lend_frontend/src/components/BookPurchase/_BookPurchase.scss
@@ -15,6 +15,7 @@ $hover-read-button-color: #adaf4a;
 		padding: .5em 1em;
 		margin: 1em 1em;
 		box-shadow: 0px 0px 2px 2px rgba(0,0,0,0.2);
+		z-index: 2;
 	}
 
 	.purchase-button{
