--- a/lend_frontend/src/components/Viewer/_Viewer.scss
+++ b/lend_frontend/src/components/Viewer/_Viewer.scss
@@ -49,6 +49,6 @@
 	flex-direction: row;
 	justify-content: space-between;
 	
-	background: cyan;
-	color: black;
+	background: $primary-color;
+	color: $white;
 }
